$Id$

2017-03-04  Christian Franke  <franke@computer.org>

	smartd.cpp: Move ATA/SCSI/NVMe device open to new common function.
	Suppress warning emails and repeated log messages on open error if
	'-d removable' is specified (Debian Bug 770872, Ubuntu Bug 1451572).
	smartd.conf.5.in: Document new behaviour of '-d removable'.

2017-03-02  Christian Franke  <franke@computer.org>

	smartd.cpp: Move single device registration to new function.
	Exit smartd on device open error unless '-q never' or '-d removable'
	is specified (regression from r2602).
	Prevent retry if registration failed and '-q never' is specified.
	Add enum for '-q, --quit' option.

2017-02-27  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron RealSSD C300/P300: Rename, add P300, remove M500
	- Crucial/Micron RealSSD m4/C400/P400: P400e micro SATA
	- Crucial/Micron MX1/2/300, M5/600, 1100 Client SSDs: Rename,
	  add MX300 (tickets #763, #791), M550 M.2 (ticket #810),
	  1100 (ticket #783)

2017-02-22  Christian Franke  <franke@computer.org>

	configure.ac: Set various default LDFLAGS for MinGW builds:
	Link statically, indicate DEP and TS compatibility, enable ASLR.
	Add '--with-mingw-aslr' option.

2017-02-20  Christian Franke  <franke@computer.org>

	os_win32.cpp: Decode Windows Server 2016 build number.

	os_win32.cpp: Rework CSMI port mapping.  This fixes access to
	ports != 0 behind IRST driver 15.2 (ticket #804).

2017-01-30  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: unblock 48bit ATACAM commands for the legacy controllers
	if FreeBSD version is >= 9.2-RELEASE, tested on FreeBSD 10.3

2017-01-28  Christian Franke  <franke@computer.org>

	ataidentify.cpp: Don't shift negative values
	(g++ 6.3: -Wshift-negative-value, cppcheck 1.77: shiftNegativeLHS).

	os_win32.cpp, scsiata.cpp, scsicmds.cpp, scsiprint.cpp: Fix 'if'
	and 'else' clause indentations (g++ 6.3: -Wmisleading-indentation).

	Add indent style configuration for EditorConfig
	(http://editorconfig.org/):